sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/IfTypeGuardStatementWithEmptyBody.sand
pub class IfTypeGuardStatementWithEmptyBody {
    foo() {
        (
            if let inline a = b() {
                
            } else {
                
            }
        )
    }
}